--- a/locale/it_IT.po
+++ b/locale/it_IT.po
@@ -1,83 +1,83 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
 msgctxt "report:sale.sale:"
 msgid "Carrier"
-msgstr "Missatger"
+msgstr "Corriere"
+
+msgctxt "report:sale.sale:"
+msgid "DISC"
+msgstr "Desc."
 
 msgctxt "report:sale.sale:"
 msgid "Date"
 msgstr "Data"
 
 msgctxt "report:sale.sale:"
-msgid "Discount"
-msgstr "Descompte"
-
-msgctxt "report:sale.sale:"
-msgid "DISC"
-msgstr "Disc."
-
-msgctxt "report:sale.sale:"
 msgid "Description"
-msgstr "Descripció"
+msgstr "Descrizione"
 
 msgctxt "report:sale.sale:"
-msgid "Price"
-msgstr "Preu"
-
-msgctxt "report:sale.sale:"
-msgid "Qty"
-msgstr "Qt."
-
-msgctxt "report:sale.sale:"
-msgid "Quotation"
-msgstr "Pressupost"
-
-msgctxt "report:sale.sale:"
-msgid "Payment Term"
-msgstr "Termini pagament"
-
-msgctxt "report:sale.sale:"
-msgid "Payment Type"
-msgstr "Tipus de pagament"
-
-msgctxt "report:sale.sale:"
-msgid "Sale Order"
-msgstr "Comanda venda"
-
-msgctxt "report:sale.sale:"
-msgid "Salesman"
-msgstr "Comercial"
-
-msgctxt "report:sale.sale:"
-msgid "Shipment Address"
-msgstr "Adreça enviament"
-
-msgctxt "report:sale.sale:"
-msgid "Tax"
-msgstr "Imposts"
-
-msgctxt "report:sale.sale:"
-msgid "Untaxed"
-msgstr "Base imposable"
-
-msgctxt "report:sale.sale:"
-msgid "Total"
-msgstr "Total"
+msgid "Discount"
+msgstr "Sconto"
 
 msgctxt "report:sale.sale:"
 msgid "Email"
 msgstr "Email"
 
 msgctxt "report:sale.sale:"
-msgid "Phone"
-msgstr "Telèfon"
+msgid "Fax"
+msgstr "Fax"
 
 msgctxt "report:sale.sale:"
 msgid "Mobile"
-msgstr "Mòbil"
+msgstr "Cellulare"
 
 msgctxt "report:sale.sale:"
-msgid "Fax"
-msgstr "Fax"
+msgid "Payment Term"
+msgstr "Termini di Pagamento"
+
+msgctxt "report:sale.sale:"
+msgid "Payment Type"
+msgstr "Forma di Pagamento"
+
+msgctxt "report:sale.sale:"
+msgid "Phone"
+msgstr "Telefono"
+
+msgctxt "report:sale.sale:"
+msgid "Price"
+msgstr "Prezzo"
+
+msgctxt "report:sale.sale:"
+msgid "Qty"
+msgstr "Qtà."
+
+msgctxt "report:sale.sale:"
+msgid "Quotation"
+msgstr "Quotazione"
+
+msgctxt "report:sale.sale:"
+msgid "Sale Order"
+msgstr "Ordine"
+
+msgctxt "report:sale.sale:"
+msgid "Salesman"
+msgstr "Commerciale"
+
+msgctxt "report:sale.sale:"
+msgid "Shipment Address"
+msgstr "Indirizzo di Consegna"
+
+msgctxt "report:sale.sale:"
+msgid "Tax"
+msgstr "Tasse"
+
+msgctxt "report:sale.sale:"
+msgid "Total"
+msgstr "Totale"
+
+msgctxt "report:sale.sale:"
+msgid "Untaxed"
+msgstr "Base Imponibile"
